--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "blog/themes/ananke"]
 	path = blog/themes/ananke
 	url = https://github.com/budparr/gohugo-theme-ananke.git
+[submodule "blog/themes/bootstrap4-blog"]
+	path = blog/themes/bootstrap4-blog
+	url = https://github.com/alanorth/hugo-theme-bootstrap4-blog.git
