--- a/.github/ workflows/hugo.yml
+++ b/.github/ workflows/hugo.yml
@@ -16,11 +16,8 @@ jobs:
         #extended: # optional, default is false
       - name: Run a one-line script
         run: echo Hello, world!
-      - name: Run a multi-line script
+      - name: Deploy Hugo To Github Pages
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          ls -al blog/themes/
-          ls -al blog/themes/ananke/
           hugo version
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
+          ./publish_to_ghpages.sh 
+        if: github.ref == 'refs/heads/master'
