--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
       - name: Deploy Hugo To Github Pages
-        with:
+        env:
           # username: ${{ GITHUB_ACTOR }}
           passowrd: ${{ secrets.GITHUB_TOKEN }}
         run: |
           hugo version
-          ./publish_to_ghpages.sh 
+          ./publish_to_ghpages.sh
         if: github.ref == 'refs/heads/master'
