--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -26,5 +26,5 @@ jobs:
         run: |
           hugo version
           ./publish_to_ghpages.sh
-          git branch -a
+          # git branch -a
         if: github.ref == 'refs/heads/master'
